--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
-          git config user.name NangManBo
+          git config user.name Bosung0413
           git config user.email kimbosung22@naver.com
           git add -A .
           git commit -m "generated"
