--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
-          git config user.name NangManBo
-          git config user.email kimbosung22@naver.com
+          git config user.name "NangManBo"
+          git config user.email "kimbosung22@naver.com"
           git add -A .
           git commit -m "generated"
           git push
